--- a/src/themes/inarafinancial/style.css
+++ b/src/themes/inarafinancial/style.css
@@ -1,5 +1,5 @@
 /**
- * Theme Name: Wordpress Boilerplate
+ * Theme Name: inarafinancial
  * Author: Sproing Creative
  * Author URI: https://sproing.com
  * Version: 1.0.0
