--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -10,12 +10,6 @@ html {
     }
 }
 
-@include media-breakpoint-up(xxl) {
-    html {
-        font-size: 18px;
-    }
-}
-
 // Global
 
 body {
@@ -32,6 +26,17 @@ body {
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
     margin-bottom: 1rem;
+    line-height:1.715;
+}
+
+.h1, h1{
+    font-size:100px;
+    font-weight:$bold;
+}
+
+.h2, h2{
+    font-size:30px;
+    font-weight:$bold;
 }
 
 .spaced-list {
@@ -60,4 +65,19 @@ body {
 
 .list-unstyled {
     margin-bottom: 1rem;
+}
+
+.sub{
+    font-size:20px;
+    font-weight:$semibold;
+}
+
+.body-text{
+    font-size:16px;
+    font-weight:$regular;
+}
+
+.body-text-semi{
+    font-size:16px;
+    font-weight:$semibold;
 }
