--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -12,6 +12,8 @@ $bg-white:#FFF;
 $bg-light:#F3F6F7;
 $bg-highlight:#ABC9BE;
 
+$text-white:#FFF;
+
 $headings-color: $primary;
 $input-focus-border-color: $primary;
 
