--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -30,8 +30,8 @@ body {
 }
 
 .h1, h1{
-    font-size:100px;
-    font-weight:$bold;
+    font-size:50px;
+    font-weight:$medium;
 }
 
 .h2, h2{
@@ -67,7 +67,7 @@ body {
     margin-bottom: 1rem;
 }
 
-.sub{
+.sub-text{
     font-size:20px;
     font-weight:$semibold;
 }
