--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -14,4 +14,5 @@
 @import "components/nav";
 @import "components/button";
 @import "components/hero";
-
+@import "components/main-catch-section";
+@import "components/about-section";
