--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -16,3 +16,5 @@
 @import "components/hero";
 @import "components/main-catch-section";
 @import "components/about-section";
+@import "components/profits-section";
+@import "components/profit-card";
