--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -39,6 +39,11 @@ body {
     font-weight:$bold;
 }
 
+.h3, h3{
+    font-size:20px;
+    font-weight:$bold;
+}
+
 .spaced-list {
     padding: 0 0 0 22px;
 }
