testimonial section progress

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -18,3 +18,5 @@
 @import "components/about-section";
 @import "components/profits-section";
 @import "components/profit-card";
+@import "components/testimonial-section";
+@import "components/testimonial-card";
