--- a/src/style/layouts/_container.scss
+++ b/src/style/layouts/_container.scss
@@ -2,6 +2,18 @@
 .container-fluid,
 .container {
     padding: 0 30px;
+    position:relative;
+
+    //debug    
+    &:after{
+        content:'';
+        position:absolute;
+        top:0;
+        left:0;
+        outline:1px solid red;
+        width:100%;
+        height:100%;
+    }
 }
 
 @include media-breakpoint-down(lg) {
