--- a/src/style/components/_profits-section.scss
+++ b/src/style/components/_profits-section.scss
@@ -3,6 +3,7 @@
         position:relative;
         display:inline-block;
 
+        //line
         &:after{
             content:'';
             width:172px;
