--- a/src/style/components/_testimonial-card.scss
+++ b/src/style/components/_testimonial-card.scss
@@ -1,4 +1,8 @@
 .testimonial-card{        
+    blockquote{
+        @include sub-text;
+    }
+
     figcaption{
         display:flex;
         align-items: center;
