--- a/src/style/components/_profits-section.scss
+++ b/src/style/components/_profits-section.scss
@@ -1,7 +1,11 @@
 .profits-section{
+    margin-top:91px;
+
     h2{
+        @include h1;
         position:relative;
-        display:inline-block;
+        display:inline-block;        
+        margin-bottom:2.2rem;
 
         //line
         &:after{
@@ -10,8 +14,8 @@
             height:6px;
             background-color:$secondary;
             position:absolute;
-            left:calc(100% + 20px);
-            top:calc(50% - 3px);
+            left:calc(100% + 23px);
+            top:calc(50% + 5px);
         }
     }
 }
@@ -24,14 +28,14 @@
     list-style-type: none;
     display:flex;
     padding:0;
-    margin:-20px;
+    margin:-15px;
 
     > *{
         flex:0 0 50%;
-        padding:20px;
+        padding:15px;
 
         &:first-child{
-            margin-top:130px;
+            margin-top:141px;
         }
     }
 }
