--- a/src/style/components/_testimonial-section.scss
+++ b/src/style/components/_testimonial-section.scss
@@ -1,9 +1,26 @@
 .testimonial-section{
+    padding:77px 0;
     background-color:$bg-highlight;
 
     h2{
         @include h1;
+        line-height:1.25;
         color:$text-light;
+        margin:88px 10px 10px 58px;
+        position:relative;
+
+        //line
+        &:before{
+            content:'';
+            width:81px;
+            height:6px;
+            background-color: $secondary;
+            position:absolute;
+            right:calc(100% + 12px);
+            top:0.6em;
+            border-radius:20px;
+        }
+
     }
 }
 
@@ -16,11 +33,11 @@
 }
 
 .testimonial-section__slider-container{
-    flex:0 0 50%;
+    flex:0 0 57.2%;
 }
 
 .testimonial-section__slider{
-    padding:40px 40px;
+    padding:50px 48px 17px;
     background-color:$bg-white;
     border-radius:20px;
     position:relative;
