--- a/src/style/components/_footer.scss
+++ b/src/style/components/_footer.scss
@@ -5,9 +5,14 @@
 
 .footer__container{
     display:flex;
+    justify-content: space-between;
 
     > *{
         border:1px solid red;
+
+        &:nth-child(1){
+            flex:0;
+        }
     }
 }
 
@@ -21,6 +26,7 @@
     list-style-type: none;
     padding:0;
     display:flex;
+    margin-top:45px;
 
     li{
         &:not(:first-child){
@@ -52,14 +58,24 @@
 .footer__contact{
     color:$text-light;
     display:flex;
+    margin-top:-8px;
+    margin-right:62px;
+
+    dl:not(:first-child){
+        margin-left:68px;
+    }
 
     dt{
         @include body-text-semi;
     }
 
+    dd{
+        margin-top:5px;
+    }
+
     dd *{
         padding:0;
-        margin:0;
+        margin:0;        
     }
 
     a{
@@ -76,12 +92,14 @@
     align-items: center;
     justify-content: flex-end;
     color:$text-light;
+    margin-top:15px;
+    margin-right:45px;
 
     p{
         margin:0;
     }
 
     .button{
-        margin-left:30px;
+        margin-left:35px;
     }
 }
