--- a/src/style/components/_testimonial-section.scss
+++ b/src/style/components/_testimonial-section.scss
@@ -8,6 +8,7 @@
         color:$text-light;
         margin:88px 10px 10px 58px;
         position:relative;
+        z-index:1;
 
         //line
         &:before{
