--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -1,4 +1,24 @@
 .header {
     background-color:$bg-white;
     padding:44px 0;
+
+    @include sp{
+        padding:21px 0;
+    }
+}
+
+.header__container{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header__logo{
+    object-fit: contain;
+    width:189px;
+    height:auto;
+
+    @include sp{
+        width:121px;
+    }
 }
