--- a/src/style/layouts/_container.scss
+++ b/src/style/layouts/_container.scss
@@ -4,6 +4,10 @@
     padding: 0 30px;
     position:relative;
 
+    @include sp{
+        padding:0 20px;
+    }
+
     //debug    
     &:after{
         content:'';
