--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -9,10 +9,11 @@
 @import "layouts/container";
 
 // Components
+@import "components/burger";
+@import "components/button";
 @import "components/header";
 @import "components/footer";
-@import "components/nav";
-@import "components/button";
+@import "components/navigation";
 @import "components/hero";
 @import "components/main-catch-section";
 @import "components/about-section";
