--- a/src/style/components/_profit-card.scss
+++ b/src/style/components/_profit-card.scss
@@ -4,6 +4,10 @@
     position:relative;
     border-radius:20px;
 
+    @include sp{
+        padding:40px 20px 28px;
+    }
+
     h3{
         margin-bottom:1.5rem;
     }
@@ -21,4 +25,10 @@
     bottom:calc(100% + 15px);
     right:59px;
     transform:translateY(50%);
+
+    @include sp{
+        width:100px;
+        height:100px;
+        right:14px
+    }
 }
