--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -21,3 +21,4 @@
 @import "components/profit-card";
 @import "components/testimonial-section";
 @import "components/testimonial-card";
+@import "components/inner-catch-section";
