--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -81,6 +81,7 @@ body {
 @mixin sub-text{
     font-size:20px;
     font-weight:$semibold;
+    color:$primary;
 }
 .sub-text{
     @include sub-text;
