blueprint and book banner sections

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -22,3 +22,5 @@
 @import "components/testimonial-section";
 @import "components/testimonial-card";
 @import "components/inner-catch-section";
+@import "components/blueprint-section";
+@import "components/book-banner-section";
