--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -24,3 +24,4 @@
 @import "components/inner-catch-section";
 @import "components/blueprint-section";
 @import "components/book-banner-section";
+@import "components/ideal-section";
