profits banner section

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -25,3 +25,4 @@
 @import "components/blueprint-section";
 @import "components/book-banner-section";
 @import "components/ideal-section";
+@import "components/profits-banner-section";
