--- a/src/style/components/_blueprint-section.scss
+++ b/src/style/components/_blueprint-section.scss
@@ -1,3 +1,7 @@
+.blueprint-section{
+    margin:64px auto 79px;
+}
+
 .blueprint-section__content{
     background-color:$bg-light;
     border-radius:20px;
