--- a/src/style/components/_book-banner-section.scss
+++ b/src/style/components/_book-banner-section.scss
@@ -1,9 +1,14 @@
 .book-banner-section{
     background-color:$bg-highlight;
     text-align:center;
-    padding:86px 20px;
+    padding:86px 20px 70px;
 
     h2{
         color:$text-light;
+    }
+
+    .button.button--book{
+        padding:13px 46px;
+        margin-top:12px;
     }
 }
