--- a/src/style/components/_ideal-section.scss
+++ b/src/style/components/_ideal-section.scss
@@ -1,9 +1,14 @@
 .ideal-section{
     margin:75px auto;
+    color:$primary;
 
     h2{
         @include h1;
         margin-bottom:0.6rem;
+
+        @include sp{
+            font-size:28px;
+        }
     }
 
     .sub-text{
@@ -15,6 +20,11 @@
     text-align:center;
     color:$primary;
     padding:0 60px;
+
+    @include sp{
+        text-align:left;
+        padding:0;
+    }
 }
 
 .ideal-section__list{
@@ -25,6 +35,13 @@
     justify-content: center;
     margin:-40px 0;
     margin-top:44px;
+
+    @include sp{
+        display:block;
+        margin:-20px auto;
+        margin-top:24px;
+        width:276px;
+    }
 }
 
 .ideal-section__list-item{
@@ -35,6 +52,10 @@
     align-items: flex-end;
     justify-content: center;
     padding:40px 0;
+
+    @include sp{
+        padding:20px 0;
+    }
 }
 
 .ideal-section__card{
