--- a/src/style/components/_profits-banner-section.scss
+++ b/src/style/components/_profits-banner-section.scss
@@ -1,6 +1,10 @@
 .profits-banner-section{
     margin:104px auto 130px;
 
+    @include sp{
+        margin:49px auto 63px;
+    }
+
     h2{
         margin-bottom:0.1rem;
     }
@@ -20,5 +24,10 @@
     background-color: $bg-light;
     border-radius:20px;
     padding:77px 100px 40px;
-    text-align:center;    
+    text-align:center;  
+    
+    @include sp{
+        padding:77px 22px 40px;
+        text-align:left;
+    }
 }
