--- a/src/style/components/_hero.scss
+++ b/src/style/components/_hero.scss
@@ -19,6 +19,10 @@
         bottom:0;
         border-radius:20px 20px 0 0;
         padding:31px 39px 19px;
+
+        @include sp{
+            text-align:center;
+        }
     }
 }
 
