--- a/src/style/components/_navigation.scss
+++ b/src/style/components/_navigation.scss
@@ -23,6 +23,19 @@
             transition:background-color 0.25s 0.4s ease-in;
             z-index:100;
             pointer-events:none;
+
+            &:before{
+                content:'';
+                width:100%;
+                height:100%;
+                position:absolute;
+                top:0;
+                left:0;
+                background:linear-gradient(90deg, #fff 80%, rgba(#fff, 0));
+                transform:scale(5) rotate(45deg) translate(-80%, 0);
+                transition:transform 0.8s ease-out;
+                z-index:-1;
+            }
         }
 
         .menu-item{
@@ -44,9 +57,13 @@
     //nav shown state
     .navbar-collapse.show{
         @include sp{
-            background-color:$bg-white;
+            //background-color:$bg-white;
             pointer-events:auto;
             transition:background-color 0.25s ease-out;
+
+            &:before{                
+                transform:scale(5) rotate(45deg) translate(0, 0);
+            }
         }
 
         .menu-item{
@@ -62,6 +79,11 @@
                     }
                 }
             }
+        }
+
+        ~ .navigation__burger{
+            position:fixed;
+            transform:translate(-34px, 0px);
         }
     }
 
