--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -18,6 +18,7 @@ body {
     font-family: $font-family-base;
     -webkit-overflow-scrolling: touch;
     line-height:1.715;
+    color:$primary;
 }
 
 .small, small {
