--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -26,3 +26,4 @@
 @import "components/book-banner-section";
 @import "components/ideal-section";
 @import "components/profits-banner-section";
+@import "components/contact-section";
