--- a/src/style/components/_hero.scss
+++ b/src/style/components/_hero.scss
@@ -31,6 +31,7 @@
     object-fit: cover;
     object-position: top;
     width:100%;
+    height:595px;
 
     @include media-breakpoint-down(lg){        
         height:260px;
