contact style adjustments

--- a/src/style/components/_contact-section.scss
+++ b/src/style/components/_contact-section.scss
@@ -21,6 +21,8 @@
     background-color:$bg-light;
     border-radius:20px;
     flex:0 0 632px;
+    padding:52px 63px;
+    transform:translateY(-100px);
 }
 
 .contact-section__tel{
