--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -27,3 +27,4 @@
 @import "components/ideal-section";
 @import "components/profits-banner-section";
 @import "components/contact-section";
+@import "components/form";
