--- a/src/style/components/_contact-section.scss
+++ b/src/style/components/_contact-section.scss
@@ -1,7 +1,27 @@
 .contact-section{
+    margin-bottom:-44px;
+
+    @include sp{
+        margin-top:30px;
+        margin-bottom:32px;
+    }
+
+    h1{
+        margin-bottom:0.2rem;
+
+        @include sp{
+            font-size:28px;
+        }
+    }
+
     p{
         font-size:20px;
         font-weight:$medium;
+
+        @include sp{
+            font-size:16px;
+            font-weight:$regular;
+        }
 
         &:last-of-type{
             display:inline;
@@ -11,10 +31,18 @@
 
 .contact-section__content{
     display:flex;
+
+    @include sp{
+        display:block;
+    }
 }
 
 .contact-section__text{
     padding:50px 145px 50px 0;
+
+    @include sp{
+        padding:0;
+    }
 }
 
 .contact-section__form{
@@ -23,12 +51,23 @@
     flex:0 0 632px;
     padding:52px 63px;
     transform:translateY(-100px);
+
+    @include sp{
+        padding:30px 27px 2px;
+        transform:none;
+        margin-top:50px;
+    }
 }
 
 .contact-section__tel{
     font-size:20px;
     font-weight:$medium;
     text-decoration: underline;
+
+    @include sp{
+        font-size:16px;
+        font-weight:$regular;
+    }
 
     &:hover{        
         color:$primary;
