--- a/src/style/components/_footer.scss
+++ b/src/style/components/_footer.scss
@@ -1,6 +1,32 @@
 .footer{
     background-color:$primary;
     padding:100px 0;
+
+    //tel and email hover
+    a[href*="tel"],
+    a[href*="mailto"]{
+        position:relative;
+
+        //underline        
+        &:after{
+            content:'';
+            width:100%;
+            height:1px;
+            background:currentColor;
+            position:absolute;
+            bottom:0;
+            left:0;
+            transform-origin:left;
+            transform:scaleX(0);
+            transition:transform 0.25s ease-out;
+        }
+
+        &:hover{
+            &:after{
+                transform:none;
+            }
+        }
+    }
 }
 
 .footer__container{
