--- a/src/style/components/_hero.scss
+++ b/src/style/components/_hero.scss
@@ -33,7 +33,7 @@
     width:100%;
     height:595px;
 
-    @include media-breakpoint-down(lg){        
+    @include sp{
         height:260px;
     }
 }
